feat: refactoring to use JWT (breaking changes) (#97)
